cabal-version:      3.0
name:               h99
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             csgn
maintainer:         dev.csgn@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  H99
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite h99-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          H99-test.hs
    build-depends:
        base ^>=4.17.2.1,
        HUnit ^>=1.6.2.0,
        h99
